--- a/index.html
+++ b/index.html
@@ -1,19 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script
-  src="https://code.jquery.com/jquery-3.6.1.js"
-  integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI="
-  crossorigin="anonymous"></script>
-    <script src="app.js" defer></script>
+      src="https://code.jquery.com/jquery-3.5.1.js"
+      integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <h1>THis is my project 1</h1>
-    
-</body>
+    <script src="app.js" defer></script>
+  </head>
+  <body>
+       <img src= "https://parade.com/.image/c_limit%2Ccs_srgb%2Cq_auto:good%2Cw_1381/MTkwNTgxMDA2ODgxNzkzMTQ5/sports-trivia-1-jpg.webp"
+       width="150" height="70">
+    <h1>Sports Fever Trivia</h1>
+    <div id="question">
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam, ullam
+      assumenda rerum dolores earum officiis dolore ipsam doloribus velit natus
+      odit cumque voluptas, blanditiis eum molestias maxime sit explicabo
+      distinctio.
+    </div>
+    <div id="answer">
+      <ul>
+        <li id="a">Answer A</li>
+        <li id="b">Answer B</li>
+        <li id="c">Answer C</li>
+        <li id="d">Answer D</li>
+      </ul>
+    </div>
+
+    <div id="scores">
+      <div id="player1">
+        <h3>Player 1</h3>
+        <h4>0</h4>
+      </div>
+      <div id="player2">
+        <h3>Player 2</h3>
+        <h4>0</h4>
+      </div>
+    </div>
+  </body>
 </html>
